Update: Use MathJax Add: Route /labels/<labelname> Add: Table labels for ProbLabels Rename: static/images/tags.png -> labels.png Add: static/mathjax-config.js for MathJax Update: static/md-render.js for MathJax

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,5 @@ __pycache__
 instance
 webenv
 probs
-static/fonts
-static/auto-render.min.js
-static/katex.min.css
-static/katex.min.js
+static/MathJax
 static/marked.min.js
