--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 __pycache__
 instance
 webenv
-probs
-static/MathJax
-static/marked.min.js
+static/fonts
+static/katex.min.js
+static/katex.min.css
+static/markdown-it.min.js
+static/texmath.min.js
+static/texmath.min.css
